bynkc/tests/fixtures/positive/83_provider_basic/src/demo/svc.karn
context demo.svc

capability Logger {
  fn log(message: String) -> Effect[()]
}

provides Logger = ConsoleLogger {
  fn log(message: String) -> Effect[()] {
    Effect.pure(())
  }
}
