bynkc/tests/fixtures/negative/126_provider_self_given/src/demo.karn
context demo

capability Logger { fn info(message: String) -> Effect[()] }

provides Logger = RecursiveLogger given Logger {
  fn info(message: String) -> Effect[()] {
    let _ <- Logger.info(message)
    Effect.pure(())
  }
}
